feat: 알고리즘 팁 수정